Fix author name vertical alignment on mobile
Change author__content vertical-align from top to middle so the
name aligns with the avatar and Follow button.

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -95,7 +95,7 @@
 
 .author__content {
   display: table-cell;
-  vertical-align: top;
+  vertical-align: middle;
   padding-left: 15px;
   padding-right: 25px;
   line-height: 1;
